# deep-research-orchestrator

./: .env.example  .gitignore  GEMINI_REVIEW_REQUEST.md  PRE_SPRINT_STATUS.md  QUICKSTART.md  README.md  READY_TO_IMPLEMENT.md  STATUS.md  TRANSITION_PLAN.md  api_server.py  pyproject.toml  rebuild_llama.sh  set_kernel_default.sh  start_clean.sh  start_dev.sh  start_docs_viewer.sh  test_adaptive_weight.py  test_adaptive_weight_simple.py  test_axiom_judge.py  test_cluster1_e2e.py  test_cluster2_e2e.py  test_conflict_resolver.py  test_coverage_mcts.py  test_create_session.py  test_fact_quality_evaluator.py  test_multi_source_verifier.py  test_spo_extraction.py  test_sprint2_generative_cot.py  test_sprint2_unit.py  test_sprint3_reddit_validation.py  test_tier_promoter.py  test_token_budget.py  test_tot_cluster2_integration.py  test_xot_mcts_integration.py
docs/: ARCHITECTURE_VISUAL.md  ARCHIVED_TODOS_2026-01-15.md  CLUSTER_1_COMPLETE.md  CLUSTER_2_COMPLETE.md  CLUSTER_2_FINAL_STATUS.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  PROJECT_QUICK_REFERENCE.md  PROJECT_STATUS_COMPREHENSIVE.md  README.md  SPRINT_2_COMPLETE.md  SPRINT_2_IMPLEMENTATION_PLAN.md  SPRINT_2_STATUS.md  SPRINT_3_COMPLETE.md  SPRINT_3_IMPLEMENTATION_PLAN.md  TERMINOLOGY_CLARIFICATION.md  THEMATIC_WORKFLOWS_CONCEPT.md  UNIFIED_ORCHESTRATOR_CONCEPT.md
gui/: README.md  UNIFIED_GUI_STATUS.md  index.html  package-lock.json  package.json  vite.config.js
scripts/: benchmark_context_sizes.py  download_models.sh  setup_llama_cpp.sh  test_axiom_manager.py  test_debate_pattern.py  (+16 more)
(+194 files in other folders)
